fix: fix height of nested blocks with a default width in a vertically stretched layout

--- a/automad/src/client/blocks/styles/layout-section.less
+++ b/automad/src/client/blocks/styles/layout-section.less
@@ -87,6 +87,10 @@ am-layout-section {
 
 	&.am-align-stretch {
 		justify-content: space-between;
+
+		& > .am-block {
+			height: 100%;
+		}
 	}
 
 	&.am-align-center {
